--- a/Sign.html
+++ b/Sign.html
@@ -177,7 +177,7 @@
     <main>
         <section class="faq">
             <h1>Sign Up for EventHub</h1>
-            <form class="signup-form" id="signupForm">
+            <form class="signup-form" id="signupForm" action="signup.php" method="post">
                 <input type="text" id="username" placeholder="Username" required>
                 <input type="email" id="email" placeholder="Email" required>
                 <input type="password" id="password" placeholder="Password" required>
