--- a/login.html
+++ b/login.html
@@ -174,7 +174,7 @@
     <main>
         <section class="faq">
             <h1>Login to EventHub</h1>
-            <form class="login-form">
+            <form class="login-form"  action="login.php" method="post" >
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
                 <button type="submit">Login</button>
