--- a/aide.html
+++ b/aide.html
@@ -567,7 +567,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="navbar-center" id="navMenu">
-            <a href="message.html">News</a>
+            <a href="message.php">News</a>
             <a href="faq.html">FAQ</a>
             <a href="aide.html" class="active">Help</a>
             <a href="apropos.html">About Us</a>
