--- a/apropos.html
+++ b/apropos.html
@@ -561,7 +561,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="navbar-center" id="navMenu">
-            <a href="message.html">News</a>
+            <a href="message.php">News</a>
             <a href="faq.html">FAQ</a>
             <a href="aide.html">Help</a>
             <a href="apropos.html" class="active">About Us</a>
