--- a/faq.html
+++ b/faq.html
@@ -554,7 +554,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="navbar-center" id="navMenu">
-            <a href="message.html">News</a>
+            <a href="message.php">News</a>
             <a href="faq.html" class="active">FAQ</a>
             <a href="aide.html">Help</a>
             <a href="apropos.html">About Us</a>
